--- a/generators/generator-bot-adaptive/package.json
+++ b/generators/generator-bot-adaptive/package.json
@@ -20,19 +20,23 @@
     "url": "https://github.com/Microsoft/botframework-components.git"
   },
   "scripts": {
-    "lint": "eslint -c .eslintrc.json ."
+    "lint": "eslint -c .eslintrc.json .",
+    "test": "mocha"
   },
   "dependencies": {
     "globby": "^11.0.2",
     "normalize-path": "^3.0.0",
     "runtypes": "~5.1.0",
     "uuid": "^8.3.1",
-    "yeoman-generator": "^1.1.1"
+    "yeoman-generator": "^2.0.5"
   },
   "devDependencies": {
+    "ejs": "^3.1.6",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
     "eslint-plugin-prettier": "latest",
-    "prettier": "latest"
+    "mocha": "^8.3.2",
+    "prettier": "latest",
+    "yeoman-test": "^6.0.0"
   }
 }
