--- a/tests/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
+++ b/tests/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
@@ -48,10 +48,10 @@
     <None Update="Integration\RecordingTests\StartRecording_WithTangent_InterruptionDisabled.test.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Integration\RecordingTests\StartRecording_IgnoredInNonTelephonyChannel.test.dialog">
+    <None Update="Integration\RecordingTests\Recording_IgnoredInNonTelephonyChannel.test.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Integration\RecordingTests\StartRecording_HappyPath.test.dialog">
+    <None Update="Integration\RecordingTests\Recording_HappyPath.test.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
