--- a/generators/generator-bot-enterprise-assistant/package.json
+++ b/generators/generator-bot-enterprise-assistant/package.json
@@ -25,7 +25,7 @@
     "lint": "eslint -c ../../.eslintrc.json ."
   },
   "dependencies": {
-    "@microsoft/generator-bot-adaptive": "workspace:^1.2.2",
+    "@microsoft/generator-bot-adaptive": "workspace:^1.2.2-rc0",
     "@microsoft/generator-bot-enterprise-calendar": "workspace:^1.2.2",
     "@microsoft/generator-bot-enterprise-people": "workspace:^1.2.2",
     "uuid": "^8.3.2",
