--- a/packages/Teams/dotnet/Microsoft.Bot.Components.Teams.csproj
+++ b/packages/Teams/dotnet/Microsoft.Bot.Components.Teams.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.16.0-rc0" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.16.0-rc0" />
   </ItemGroup>
 
 </Project>
