--- a/packages/AdaptiveCards/Microsoft.Bot.Components.AdaptiveCards.csproj
+++ b/packages/AdaptiveCards/Microsoft.Bot.Components.AdaptiveCards.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="AdaptiveCards.Templating" Version="1.2.1" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.16.0-rc0" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.16.0" />
   </ItemGroup>
 
   <ItemGroup>
