--- a/generators/generator-bot-empty/package.json
+++ b/generators/generator-bot-empty/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint -c ../../.eslintrc.json ."
   },
   "dependencies": {
-    "@microsoft/generator-bot-adaptive": "workspace:^1.3.0-rc0",
+    "@microsoft/generator-bot-adaptive": "workspace:^1.3.0",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
