--- a/generators/generator-bot-enterprise-calendar/package.json
+++ b/generators/generator-bot-enterprise-calendar/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@microsoft/generator-bot-adaptive": "workspace:^1.3.0-rc0",
+    "@microsoft/generator-bot-adaptive": "workspace:^1.3.0",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
