--- a/skills/csharp/tests/automotiveskill.tests/AutomotiveSkill.Tests.csproj
+++ b/skills/csharp/tests/automotiveskill.tests/AutomotiveSkill.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <NoWarn>NU1701</NoWarn>
