--- a/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
+++ b/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
@@ -6,7 +6,7 @@
 		<PackageTags>msbot-component;msbot-recognizer;composer;botframework;botbuilder</PackageTags>
 		<Version>1.0.0</Version>
 		<PackageLicenseUrl>https://github.com/BotBuilderCommunity/botbuilder-community-dotnet/blob/master/LICENSE</PackageLicenseUrl>
-		<PackageProjectUrl>https://github.com/BotBuilderCommunity/botbuilder-community-dotnet/tree/master/libraries/Bot.Builder.Community.Recognizers.QuestionAnsweringRecognizer/</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/botframework-components/tree/main/packages/Recognizers/CustomQuestionAnswering</PackageProjectUrl>
 		<Copyright>Microsoft 2022</Copyright>
 		<RepositoryUrl>https://github.com/BotBuilderCommunity/botbuilder-community-dotnet/blob/develop/libraries/Bot.Builder.Community.Recognizers.QuestionAnsweringRecognizer/</RepositoryUrl>
 		<IncludeSymbols>True</IncludeSymbols>
@@ -15,6 +15,7 @@
 		<Authors>Microsoft</Authors>
 		<PackageId>Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer</PackageId>
 		<AssemblyName>Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer</AssemblyName>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
