--- a/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
+++ b/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<OutputType>Library</OutputType>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+	</PropertyGroup>
+	
+	<PropertyGroup>
 		<Nullable>enable</Nullable>
 		<PackageTags>msbot-component;msbot-recognizer;composer;botframework;botbuilder</PackageTags>
 		<Version>1.0.0</Version>
