--- a/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
+++ b/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
@@ -9,7 +9,7 @@
 	
 	<PropertyGroup>
 		<PackageId>Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer</PackageId>
-		<Version>1.0.0</Version>
+		<VersionPrefix>1.0.0</VersionPrefix>
 		<PackageTags>msbot-component;msbot-recognizer;composer;botframework;botbuilder</PackageTags>
 		<Title>Question Answering Recognizer</Title>
 		<Description>This library implements .NET support for Composer with Custom Question Answering.</Description>
