--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "resolutions": {
     "adal-node": "0.2.4",
+    "async": "2.6.4",
     "axios": "1.2.1",
     "@azure/identity": "3.1.2",
     "@azure/ms-rest-js": "2.6.4",
