--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "adal-node": "0.2.4",
     "async": "2.6.4",
     "axios": "1.2.1",
+    "cross-fetch": "3.1.5",
+    "node-fetch": "2.6.7",
     "@azure/identity": "3.1.2",
     "@azure/ms-rest-js": "2.6.4",
     "@xmldom/xmldom": "0.8.6"
