--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "1.2.1",
     "cross-fetch": "3.1.5",
     "node-fetch": "2.6.7",
+    "tar": "6.1.13",
     "@azure/identity": "3.1.2",
     "@azure/ms-rest-js": "2.6.4",
     "@xmldom/xmldom": "0.8.6"
