--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "resolutions": {
     "adal-node": "0.2.4",
     "axios": "1.2.1",
-    "async": "2.6.4",
+    "async@2": "^2.6.4",
+    "async@3": "^3.2.4",
     "cross-fetch": "3.1.5",
     "node-fetch": "2.6.7",
     "tar": "6.1.13",
